# authstick

./: .gitignore  CLAUDE.md  README.md  README_CN.md  system-performance-analysis.md
.github/workflows/: pages.yml  release.yml
firmware/: CMakeLists.txt  build_web.sh  partitions.csv  sdkconfig.defaults
firmware/components/auth_button/: CMakeLists.txt  Kconfig  button.c  button.h
firmware/components/auth_client/: CMakeLists.txt  Kconfig  auth_client.c  auth_client.h
firmware/components/display/: CMakeLists.txt  Kconfig  authstick_icon.c  display.c  display.h  font_digits_30_4.c  font_digits_30_4.h
firmware/main/: CMakeLists.txt  idf_component.yml  main.cpp
server/: auth.py  server.py
web-flash/: debug.html  dev.html  flash.html  fw-meta.json  index.html
